--- a/seoapp/templates/index.html
+++ b/seoapp/templates/index.html
@@ -4,17 +4,14 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Page Title</title>
+		<title>SEO || Service Provider</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<link href="/static/assets/bootstrap-icons.css" rel="stylesheet">
-  <link href="/static/assets/boxicons/css/boxicons.min.css" rel="stylesheet">
+		<link href="/static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
 	<link rel="canonical" href="https://tkckitchens.co.uk/">	
-
-	
-	<meta name=”twitter:url” content="https://tkckitchens.co.uk/" />
 		<link rel="stylesheet" href="/static/css/style.css">
 		
 	</head>
@@ -28,9 +25,9 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#packages">packages</a></li>
           <li><a class="nav-link scrollto " href="#reviews">Reviews</a></li>
-          <li><a class="nav-link scrollto" href="">company</a></li>
+          <li><a class="nav-link scrollto">company</a></li>
           
-          <li><a class="nav-link scrollto" href="">markets</a></li>
+          <li><a class="nav-link scrollto">markets</a></li>
           <li>
         <div class="phone text-uppercase">
          		<strong class="">phone: 021333211234</strong>
@@ -55,10 +52,10 @@
           {% endfor %}
  
 
-  <section id="hero">
+  <section id="hero" style="">
      <div class="container hero-container" data-aos="fade-up" data-aos-delay="150">
-      <h3 class="text-white">Your First Step to </h3><br>
-      <h1 class="text-uppercase">seo success</h1>
+      <h1 class="text-white">Your First Step to </h1><br>
+      <h3 class="text-uppercase">seo success</h3>
       <p class="text-uppercase text-white">Grow your business</p>
       <div class="d-flex mt-5">
         <button class="btn text-uppercase" href="#C4"><a href="#C4" style="text-decoration: none;color: white;">get a free quote</a></button>
@@ -67,7 +64,7 @@
   </section>
 
             <div class="wrapper wrapper--w780 mb-3">
-            <div class="card card-3 border-0">
+            <div class="card card-3 border-0" style="background-color: #F2F6FD;">
                 <div class="card-heading">
                 	<img src="/static/img/logo.png" alt="" height="28px" width="90px">
                 	<h5>Sign Up to Get Free Consultancy!</h5>
@@ -100,24 +97,30 @@
             </div>
           </div>
 
-
-
-		 <section id="services">
-			
-			<div class="container-fluid seo-section">
-				<div class="row justify-content-end rows-1">
-				
-					
-						<div class="col-lg-3 col-md-6 col-sm-6 text-center row-1">
-					<div class="card border-0 py-5 mb-4 px-4 crts">
+ <section id="services" class="services" style="">
+			<div class="container seo-section">
+				<div class="row rows-1 justify-content-around">			
+					<div class="col-md-12">
+					<h1 class="text-center text-dark grow"><strong>Grow Your Business</strong></h1>
+					<h3 class="text-uppercase text-center text-muted mt-2 mb-4">Our SERVICES</h3>
+						<p class="text-muted text-center">At our company, we offer a variety of services that focus on the use of data. We have a team of experts who utilize proven SEO strategies and data-focused methodologies to get your website the visibility it needs online. In addition, our transparent reporting will help you understand the progress your business is making and how your website is performing. Contact us today to learn more about our services!</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 text-center" style="">
+					<div class="card border-0 pt-5 pb-5 mb-3 px-4  crts">
 							<img src="/static/img/seo.png" class="mb-4" width="50px" height="50px" alt="">
-							<h1 class="mb-3"><strong>PROVEN SEO STRATEGIES</strong></h1>
-							<small class="text-muted mb-n3">
+							<h1 class="mb-4"><strong>PROVEN SEO STRATEGIES</strong></h1>
+							<small class="text-muted mb-">
 								Our proven set of SEO strategies have gotten us to the very top with over 250 satisfied clients around the
 world.
 							</small>
 					</div>
-					<div class="card border-0 py-5 	px-4">
+					<ul class="text-left">
+					<li><h2><strong><span><i class="fa-solid fa-circle-check"></i></span>Proven SEO Strategies</strong></h2></li>
+					
+					</ul>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 text-center">
+					<div class="card border-0 py-5 	px-4 mb-3">
 							<img src="/static/img/report.png" class="mb-4" width="50px" height="50px" alt="">
 							<h1 class="mb-3"><strong>MINIMALLY TRANSPARENT
 REPORTING</strong></h1>
@@ -126,9 +129,14 @@ REPORTING</strong></h1>
 										which is mainly why we provide minimal and transparent data reports
 										each month to our clients.
 							</small>
-					</div></div>
-						<div class="col-lg-3 col-md-6 col-sm-6 text-center row-2">
-					<div class="card border-0 py-5 px-4 mt-5">
+					</div>
+					<ul class="text-left">
+			
+					<li><h2><strong><span><i class="fa-solid fa-circle-check"></i></span>Minimally Transparent Reporting</strong></h2></li>
+					</ul>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 text-center">
+					<div class="card border-0 py-5 px-4 mb-3">
 							<img src="/static/img/data.png" class="mb-4" width="50px" height="50px" alt="">
 							<h1 class="mb-3"><strong>DATA FOCUESD METHODOLOGIES</strong></h1>
 							<small class="text-muted mb-n3">
@@ -136,28 +144,18 @@ REPORTING</strong></h1>
 								are focused on getting you results that deeply matter for your business.
 							</small>
 					</div>
-				</div>
-				<div class="col-lg-4 col-md-12 col-sm-12 service">
-					<small class="text-muted text-uppercase" style="font-size: 18px;">our services</small>
-					<h1 class="text-dark"><strong>Grow Your Business</strong>
-					</h1>
-					<p style="word-spacing: 2px;">At our company, we offer a variety of services that focus on the use of data. We have a team of experts who utilize proven SEO strategies and data-focused methodologies to get your website the visibility it needs online. In addition, our transparent reporting will help you understand the progress your business is making and how your website is performing. Contact us today to learn more about our services!</p>
-					<ul>
-					<li><h2><strong><span><i class="fa-solid fa-circle-check"></i></span>Proven SEO Strategies</strong></h2></li>
+					<ul class="text-left">
+					
 					<li><h2><strong><span><i class="fa-solid fa-circle-check"></i></span>Data Focused Methodologies</strong></h2></li>
-					<li><h2><strong><span><i class="fa-solid fa-circle-check"></i></span>Minimally Transparent Reporting</strong></h2></li>
+					
 					</ul>
 				</div>
-				<div class="col-lg-1 mt-0 image-1">
-					<img src="/static/img/Ellipse 3.png" style="width: 100%;
-	height: 180%;
-	position: absolute;
-	top:-60%;
-	right:10%;
-	left:0;">
-				</div>
-			</div></div>
+			</div>
+			</div>
+				
 		</section>
+
+		
 
 		<section class="off-seo-page mt-5">
 			<div class="container-fluid">
@@ -228,19 +226,22 @@ REPORTING</strong></h1>
 						<img src="/static/img/Shape 7.png" width="290px" height="450px" class="ml-n3" style="margin-top: -100px;">
 					</div>
 
-					<div class="col-md-6 col-lg-3 col-sm-12 mb-2">
+					
+           <div class="col-md-6 col-lg-3 col-sm-12 mb-2">
 
 
 						<div class="card text-center border-0 mb-5">
-  <div class="card-header basic-header text-center text-white border-0">
+  <div class="card-header basic-header text-center text-white border-0 py-4">
     <p class="mb-0">Basic</p>
     <h3 class="mt-0 mb-1">Local Essentials</h3>
-    <h4>€ 250</h4>
+    <div class="price-value-basic">
+    	<h4 class="pb-0 font-weight-bold">€ 250</h4>
+    </div>
   </div>
 
   <div class="card-body  basic-body">
     <ul class="text-left">
-    	<li>TPrimary Business Listings <span><i class="fa-solid fa-check"></i></span></li>
+    	<li class="mt-4">TPrimary Business Listings <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Single Address optimisation <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Website On Page optimisation <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Keywords <span><i class="fa-solid fa-check"></i></span></li>
@@ -249,25 +250,26 @@ REPORTING</strong></h1>
     	<li>High DA Content Based Backlinks <span><i class="fa-solid fa-check"></i></span></li>
     	<li style="border-bottom: none;">Internal Links optimisation <span><i class="fa-solid fa-check"></i></span></li>
     </ul>
-    <div class="text-center">
-    <button class="btn text-center">Buy Now</button>
-</div>
   </div>
+  <div class="pricingTable-signup ">
+                        <a href="#">Buy Now</a>
+                    </div>
 </div>
 					</div>
 
 					<div class="col-md-6 col-lg-3 col-sm-12 g-0 mb-2">
-						<div class="card text-center border-0 standard-card mb-3">
-  <div class="card-header basic-header standard-header text-center text-white border-0">
+						<div class="card text-center border-0 standard-card" style="border-radius: 120px 0;">
+  <div class="card-header basic-header standard-header text-center text-white pb-4 border-0">
   	<div>
   <p class="recomend text-uppercase py-1 "><span><i class="fa-solid fa-star" style="color: #6458ee;"></i></span> Recomended</p></div>
-    <p class="mb-0 standard">Standard</p>
-    <h3 class="mt-0 mb-0"><strong>Local Advanced</strong></h3>
-    <h4 class="pb-0"><strong>€ 499</strong></h4>
-  </div>
+     <p class="mb-0">Standard</p>
+    <h3 class="mt-0 mb-1">Local Advanced</h3>
+    <div class="price-value-standard" style="border:5px solid #905cea;border-radius: 50%;color: #6458ee;">
+    	<h4 class="pb-0 font-weight-bold">€ 499</h4>
+    </div></div>
 
   <div class="card-body basic-body  standard-body" style="background-color: white;">
-    <ul class="text-left">
+    <ul class="text-left mt-4 mb-5">
     	<li>Local Three Pack Placement <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Basic Local Posts Setup <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Special Attributes Setup <span><i class="fa-solid fa-check"></i></span></li>
@@ -275,26 +277,32 @@ REPORTING</strong></h1>
     	<li>Primary Business Listings <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Multi Address optimisation <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Website On Page Optimisation <span><i class="fa-solid fa-check"></i></span></li>
-    	<li style="border-bottom: none;">Keywords <span><i class="fa-solid fa-check"></i></span></li>
+    	<li style="border-bottom: none;" class="">Keywords <span><i class="fa-solid fa-check"></i></span></li>
     </ul>
-    <div class="text-center">
-    <button class="btn text-center">Buy Now</button>
-</div>
+   
   </div>
+  <div class="pricingTable-signup " style="background-image: linear-gradient(to top, #3931AF , #0F9FEA); ">
+                        <a href="#">Buy Now</a>
+                    </div>
 </div>
 					</div>
-					<div class="col-md-6 col-lg-3 col-sm-12 mb-2">
-
+					<div class="col-md-6 col-lg-3 col-sm-12 mb-2 ">
 						<div class="card text-center border-0 mb-5" style="z-index: 1;">
-  <div class="card-header basic-header text-center text-white border-0 " style="background-image: linear-gradient(to right, 
+							<div class="card-header basic-header text-center text-white border-0 py-4" style="background-image: linear-gradient(to right, 
 #6ac366 , #35ae61);">
     <p class="mb-0">Premium</p>
     <h3 class="mt-0 mb-1">Local Powerhoue</h3>
-    <h4>€ 750</h4>
+    <div class="price-value-premium">
+    	<h4 class="pb-0 font-weight-bold">€ 750</h4>
+    </div>
   </div>
 
+
+
+						
+  
   <div class="card-body  basic-body">
-    <ul class="text-left">
+    <ul class="text-left mt-4">
     	<li>TPrimary Business Listings <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Single Address optimisation <span><i class="fa-solid fa-check"></i></span></li>
     	<li>Website On Page optimisation <span><i class="fa-solid fa-check"></i></span></li>
@@ -304,11 +312,11 @@ REPORTING</strong></h1>
     	<li>High DA Content Based Backlinks <span><i class="fa-solid fa-check"></i></span></li>
     	<li style="border-bottom: none;">Internal Links optimisation <span><i class="fa-solid fa-check"></i></span></li>
     </ul>
-    <div class="text-center">
-    <button class="btn text-center" style="background-image: linear-gradient(to right, 
-#6ac366 , #35ae61);">Buy Now</button>
-</div>
+    
   </div>
+<div class="pricingTable-signup-1">
+                        <a href="#">Buy Now</a>
+                    </div>
 </div>
 					</div>
 					<div class="col-lg-1 image-1">
@@ -387,18 +395,40 @@ REPORTING</strong></h1>
 
 </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<section class="reviews text-white" id="reviews">
 			<div class="container-fluid">
 				<div class="row justify-content-center py-5">
 						<div class="col-md-9 col-lg-9 col-sm-9">
 					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+						 <ol class="carousel-indicators ">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" style="border-"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
 						<p class="mb-0">REVIEWS</p>
 						<h2 class="mt-0 mb-4"><strong>What People Say</strong></h2>
 						<div class="card mb-5 shadow-lg p-3" style="color: #a581fa">
 							<div class="d-inline-bloc" style="display: inline-block;">
-							<img src="/static/img/user-icon.png" height="56px" width="50px" alt="" style="float: left; margin-top:5px; " class="mr-2">
+							<img src="/static/img/user-icon.PNG" height="56px" width="50px" alt="" style="float: left; margin-top:5px; " class="mr-2">
 							<p class="mb-0" style="font-size: 22px;">Mihuel Henry</p>
 							<h1 class=" mt-0">CEO | dresslomar.com</h1></div>
 							<p>Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Iste saepe sapiente, beatae veniam hic enim nam quis obcaecati quidem, sit eveniet illo iure, itaque sint nobis reprehenderit tenetur libero consequatur!</p>
@@ -410,7 +440,7 @@ REPORTING</strong></h1>
 						<h2 class="mt-0 mb-4"><strong>What People Say</strong></h2>
 						<div class="card mb-5 shadow-lg p-3" style="color: #a581fa">
 							<div class="d-inline-bloc" style="display: inline-block;">
-							<img src="/static/img/user-icon.png" height="56px" width="50px" alt="" style="float: left; margin-top:5px; " class="mr-2">
+							<img src="/static/img/user-icon.PNG" height="56px" width="50px" alt="" style="float: left; margin-top:5px; " class="mr-2">
 							<p class="mb-0" style="font-size: 22px;">Mihuel Henry</p>
 							<h1 class=" mt-0">CEO | dresslomar.com</h1></div>
 							<p>Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Iste saepe sapiente, beatae veniam hic enim nam quis obcaecati quidem, sit eveniet illo iure, itaque sint nobis reprehenderit tenetur libero consequatur!</p>
@@ -418,29 +448,62 @@ REPORTING</strong></h1>
     </div>
    
   </div></div>
+  <div class="icons-arrow">
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" >
 						<i class="fa-solid fa-arrow-left-long fa-2x"></i>
   </a>
   <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
 						<i class="fa-solid fa-arrow-right-long fa-2x"></i>
 					
+  </a></div>
+  <div class="icons">
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon ml-2 py-3" aria-hidden="true" style="background-color: grey;"></span>
+    <span class="sr-only">Previous</span>
   </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon mr-2 py-3" aria-hidden="true" style="background-color: grey;"></span>
+    <span class="sr-only">Next</span>
+  </a></div>
 </div>
 				</div>
 			</div>
 		</section>
 
-		<footer>
-			<div class="container py-5">
-				<div class="row justify-content-center py-5">
-					<div class="col-lg-4 col-md-4">
-						<img src="/static/img/logo.png" class=" mb-4 mt-2" height="38px" width="100px" alt="">
+
+<section class="emailing mx-5">
+	<div class="container-fluid ">
+		<div class="row email-subscribe justify-content-center">
+			<div class="col-md-4">
+				<div class="email-sub">
+					<h3 class="mt-3">Stay updated with our latest news and offers</h3>
+				</div>
+			</div>
+				<div class="col-md-7">
+					<form action="/subscribe/" method="POST">
+						{% csrf_token %}
+						<div class="buttonIn">
+        <input type="email" id="enter" class="form-control" name="email" placeholder="Your Email">
+        <button id="clear">Subscribe</button>
+    </div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+		<footer class="mb-5">
+			<div class="container mb-4 border-bottom border-primary">
+				<div class="row py-5">
+					<div class="col-lg-4 col-md-4 border-right border-primary">
+						<h1 class="mt-2 text-dark mb-4" style="font-weight:bolder;font-size: 40px;color: black;">MSO</h1>
 						<p class="mt-3"><i class="fas fa-map-marker-alt"></i><span class="pl-3">82 Kind Street, Manchester M2 4WQ</span></p>
             <p><i class="fas fa-phone-alt align-self-center"></i><a href="tel:+08002118289" class="pl-2">012939393</a></p>
             <p><i class="fas fa-envelope align-self-center"></i><a href="mailto:seo@gmail.com" class="pl-2">seo@gmail.com</a></p>
 					</div>
 					<div class="col-lg-4 col-md-4">
-						<h1 class="mb-4 mt-3"><strong>OUR SERVICES</strong></h1>
+						<h1 class="mb-4 mt-3 text-dark"><strong>OUR SERVICES</strong></h1>
 						<ul>
 							<li><span>> </span>SEO for SMBs</li>
 							<li><span>> </span>Enterprise SEO</li>
@@ -449,18 +512,15 @@ REPORTING</strong></h1>
 							<li><span>> </span>White-label SEO</li>
 						</ul>
 					</div>
-					<div class="col-lg-4 col-md-4 news-letter">
-					<h1 class="mb-3 mt-3"><strong>NEWSLETTER</strong></h1>
-					<p class="pt-3 mr-5">Stay updated with our latest news and offers, please enter your email address.</p>
-					<button class="btn border-white px-4 py-3 text-white">E-mail Address <span class="pl-2"> <	</span></button>
-					<form action="/subscribe/" method="POST">
-						{% csrf_token %}
-						<input type="email" class="form-control my-2 py-4" placeholder="E-mail" name="email" required="">
-						<input type="submit" value="Subscribe" class="btn btn-success py-2">
-					</form>
+					<div class="col-lg-4   col-md-4 news-letter border-left border-primary">
+					<h1 class="mb-3 mt-3 text-dark"><strong>NEWSLETTER</strong></h1>
+					<p class="pt-3 mr-5">Stay updated with our latest news and offers, please enter above your email address</p>
+					<button class="btn border-primary text-primary px-4 py-3">E-mail Address <span class="pl-1"> <	</span></button>
+					
 					</div>
 				</div>
 			</div>
+			
 		</footer>
 		 <script src="/static/js/main.js"></script>
 
